feat: 支持多条打招呼语句 perf: 修改部分方法调用，让代码更加易读